# socket_apps

./: .gitignore  CMakeLists.txt  README.md  client.cpp  format.sh  makefile  server  server.cpp
client/: client  client.cpp  client_main.cpp  client_socket.cpp  client_socket.h
scripts/: debian_packages_install.sh  format.sh
server/: server_main.cpp  server_socket.cpp  server_socket.h
